--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <meta property="twitter:image" content="">
 
 
+<meta name="google-site-verification" content="53JR59FF6SIJu3ab1YkGbPGpe-XkZ3QrkqhCuJBEbcY" />
+
 <!-- Analytics END -->
 
 </head>
