--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design Lyon.">
-    <meta name="description" content="La Chouette Agence est une agence de design.">
+    <meta name="keywords" content="agence web design, site internet, marketing digital, agence design Lyon.">
+    <meta name="description" content="La Chouette Agence est une agence de web design qui aide les entreprises à devenir attractive et visibles. Nous sommes là pour vous !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -12,9 +12,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-	<link rel="canonical" href="https://lachouetteagence.com/page" />
+	<link rel="canonical" href="https://tachalog.github.io/P4OC_lachouetteagence/" />
 
 	<code><meta name="robots" content="index, follow"></code>
+	
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -29,20 +30,19 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://lachouetteagence.com/">
+<meta property="og:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
 <meta property="og:title" content="La Chouette Agence, web design">
 <meta property="og:description"	content="La Chouette Agence est une agence de web design qui aide les entreprises à devenir attractive et visibles. Nous sommes là pour vous !">
 <meta property="og:image" content="">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://lachouetteagence.com/">
+<meta property="twitter:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
 <meta property="twitter:title" content="La Chouette Agence, web design">
 <meta property="twitter:description" content="La Chouette Agence est une agence de web design qui aide les entreprises à devenir attractive et visibles. Nous sommes là pour vous !">
 <meta property="twitter:image" content="">
 
 
-<meta name="google-site-verification" content="53JR59FF6SIJu3ab1YkGbPGpe-XkZ3QrkqhCuJBEbcY" />
 
 <!-- Analytics END -->
 
@@ -294,22 +294,8 @@
 							<li><a href="123site.com">123site.com</a></li>
 							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
 							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+							
 							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
