--- a/page2.html
+++ b/page2.html
@@ -102,7 +102,7 @@
 
 <!-- bloc-7 -->
 <form class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
+	<fieldset class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
@@ -142,7 +142,7 @@
 			</div>
 			</address>
 		</div>
-	</div>
+	</fieldset>
 </form>
 <!-- bloc-7 END -->
 
