Modification des images et des méta tags et balises

--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://lachouetteagence.com/index" />
 
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -135,11 +135,11 @@
 				</form>
 			</div>
 			<address>
-			<div class="col-sm-6">
-				<p>
+				<div class="col-sm-6">
+					<p>
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
+					</p>
+				</div>
 			</address>
 		</div>
 	</fieldset>
