--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://tachalog.github.io/P4OC_lachouetteagence/" />
 
-	<meta name="robots" content="index, follow">
+	<meta name="robots" content="noindex, follow">
 	
 
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -186,8 +186,8 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/1.jpg" alt="Photo de journaux papier ouvert et empiler les uns sur les autres faisant un dégradé de couleur" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/newspaper.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+					<img src="img/newspaper.jpg" alt="Photo de journaux papier ouvert et empiler les uns sur les autres faisant un dégradé de couleur" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -196,7 +196,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une jeune fille avec une capuche prenant une photo la nuit" /></a>
+				<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une jeune fille avec une capuche prenant une photo la nuit" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -207,7 +207,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image d'un ensemble de matériels pour appareil photo et d'un ordinateur portable"/></a>
+				<a href="#" data-lightbox="img/devicephoto.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/devicephoto.jpg" class="img-responsive portfolio-thumb" alt="Image d'un ensemble de matériels pour appareil photo et d'un ordinateur portable"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -216,7 +216,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image de deux personnes avec leur ordinateurs avec des papiers et ruban qui organise un événement" /></a>
+				<a href="#" data-lightbox="img/organisation.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/organisation.jpg" class="img-responsive portfolio-thumb" alt="Image de deux personnes avec leur ordinateurs avec des papiers et ruban qui organise un événement" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
