--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://lachouetteagence.com/index" />
 
-	<code><meta name="robots" content="index, follow"></code>
+	<meta name="robots" content="index, follow">
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -102,7 +102,7 @@
 
 <!-- bloc-7 -->
 <form class="bloc bgc-white l-bloc" id="bloc-7">
-	<div class="container bloc-lg">
+	<fieldset class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
@@ -135,14 +135,14 @@
 				</form>
 			</div>
 			<address>
-			<div class="col-sm-6">
-				<p>
+				<div class="col-sm-6">
+					<p>
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
+					</p>
+				</div>
 			</address>
 		</div>
-	</div>
+	</fieldset>
 </form>
 <!-- bloc-7 END -->
 
