--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.jpg" class="center-block image-resize-mode" width="100" alt="" />
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La Chouette Agence
 				</h1>
@@ -284,7 +284,7 @@
 							</ul>
 						</div>
 						<div class="col-sm-4">
-						Annuaires liste 1
+						Annuaires
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
