--- a/page2.html
+++ b/page2.html
@@ -101,8 +101,8 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<form class="bloc bgc-white l-bloc" id="bloc-7">
-	<fieldset class="container bloc-lg">
+<div class="bloc bgc-white l-bloc" id="bloc-7">
+	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
@@ -142,8 +142,8 @@
 				</div>
 			</address>
 		</div>
-	</fieldset>
-</form>
+	</div>
+</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
