Modifcation de la balise robo pour indexation.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://tachalog.github.io/P4OC_lachouetteagence/" />
 
-	<meta name="robots" content="noindex, follow">
+	<meta name="robots" content="index, follow">
 	
 
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -196,7 +196,8 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une jeune fille avec une capuche prenant une photo la nuit" /></a>
+				<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+					<img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une jeune fille avec une capuche prenant une photo la nuit" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
