Correction sur un label button non necessaire

--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="fr">
-
 <head>
 	<meta charset="utf-8">
 	<meta name="keywords" content="agence web design, site internet, marketing digital, agence design Lyon.">
@@ -113,7 +112,7 @@
 									nécessaire)<br></label>
 								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" role="button"
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
 								type="submit" aria-label="bouton d'envoie du mail de contact"> Envoyer </button>
 						</form>
 					</div>
@@ -178,7 +177,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
 			</div>
 		</footer>
 		<!-- Footer - bloc-8 END -->
