--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="page2.html"><img src="img/la-chouette-agence.png"
 						alt="La chouette agence, agence web design Lyon, logo" height="40" /></a>
-					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
-					data-target=".navbar-1">
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
