Correction des fautes d'orthographes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="keywords" content="agence web design, site internet, marketing digital, agence design Lyon.">
-		<meta name="description" content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta name="description" content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
@@ -14,8 +15,7 @@
 
 		<link rel="canonical" href="https://tachalog.github.io/P4OC_lachouetteagence/" />
 
-		<meta name="robots" content="index, follow">
-		
+		<meta name="robots" content="index, follow">		
 
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
@@ -32,14 +32,14 @@
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
 		<meta property="og:title" content="La Chouette Agence, web design">
-		<meta property="og:description"	content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta property="og:description"	content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
 		<meta property="og:image" content="./img/logo.png">
 
 <!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
 		<meta property="twitter:title" content="La Chouette Agence, web design">
-		<meta property="twitter:description" content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta property="twitter:description" content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
 		<meta property="twitter:image" content="./img/logo.png">
 
 <!-- Analytics END -->
@@ -142,7 +142,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 					<h3>"La chouette agence est une excellente agence web! Les web designers ont réussi à capturer l'essence
-					de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à
+					de notre entreprise et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventes en ligne à
 					Lyon."</h3>
 						<p>
 						Maxime Guibard, PDG de A vos fourchettes
@@ -159,7 +159,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h2 class="mg-md text-center tc-white"> Nous souhaitons aider les entreprises de la région Lyonnaise à
+				<h2 class="mg-md text-center tc-white"> Nous souhaitons aider les entreprises de la région lyonnaise à
 					se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à
 					attirer de nouveaux clients.<br></h2>
 					<p class="text-center white">
