--- a/page2.html
+++ b/page2.html
@@ -1,39 +1,42 @@
 <!doctype html>
 <html lang="fr">
-<head>
-	<meta charset="utf-8">
-	<meta name="keywords" content="agence web design, site internet, marketing digital, agence design Lyon.">
-	<meta name="description"
-		content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel="canonical" href="https://lachouetteagence.com/index" />
-	<meta name="robots" content="index, follow">
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
-	<title>La Chouette Agence</title>
+	<head>
+		<meta charset="utf-8">
+		<meta name="keywords" content="agence web design, site internet, marketing digital, agence design Lyon.">
+		<meta name="description"content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="canonical" href="https://lachouetteagence.com/index" />
+
+		<meta name="robots" content="index, follow">
+
+		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jquery.touchSwipe.js" defer></script>
+		<script src="./js/gmaps.js"></script>
+
+		<title>La Chouette Agence</title>
+
 	<!-- Analytics -->
+
 	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
-	<meta property="og:title" content="La Chouette Agence, web design">
-	<meta property="og:description"
-		content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
-	<meta property="og:image" content="./img/logo.png">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
+		<meta property="og:title" content="La Chouette Agence, web design">
+		<meta property="og:description" content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta property="og:image" content="./img/logo.png">
 	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
-	<meta property="twitter:title" content="La Chouette Agence, web design">
-	<meta property="twitter:description"
-		content="La Chouette Agence est une agence de web design situer à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
-	<meta property="twitter:image" content="./img/logo.png">
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://tachalog.github.io/P4OC_lachouetteagence/">
+		<meta property="twitter:title" content="La Chouette Agence, web design">
+		<meta property="twitter:description" content="La Chouette Agence est une agence de web design situé à Lyon qui aide les entreprises à devenir attractives et visibles. Nous sommes là pour vous !">
+		<meta property="twitter:image" content="./img/logo.png">
 	<!-- Analytics END -->
 </head>
 
@@ -45,15 +48,13 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="La Chouette Agence à Lyon, agence de web design logo" height="40" /></a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-							data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
+						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"	alt="La Chouette Agence à Lyon, agence de web design logo" height="40" /></a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
@@ -142,7 +143,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<p class="text-center white">
-							La chouette agence - Agence web basée à Lyon.
+							La chouette agence - Agence web basé à Lyon.
 							<br>
 						</p>
 						<div class="row row-no-gutters social">
