--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.
+					La chouette agence - Agence web basé à Lyon.
 					<br>
 				</p>
 				<div class="row row-no-gutters social">
